--- a/Thanks
+++ b/Thanks
@@ -28,7 +28,7 @@ Michael Basler <pmb@knUUt.de>
 
 
 Paul Beardsley <Beardspa@hotmail.com>
-  The 1903 Flyer was inspired by a model contributed by Paul
+  The 1903 Wright Flyer was inspired by a model contributed by Paul
   Beardsley.  Very little of the original model remains, but without
   Paul's excellent work we might not have our own 1903 Flyer. Model
   was reworked and retextured by Jim Wilson.
@@ -237,9 +237,9 @@ David Luff <david.luff@nottingham.ac.uk>
 
 
 Lewis Magruder <blackhawk96@hotmail.com>
-  Original exterior model and textures.  Lewis's work is pretty much
-  as converted from the original.  The interior cockpit was added by
-  Jim Wilson.
+  Original A-4 Blue Angels exterior model and textures.  Lewis's work
+  is pretty much as converted from the original.  The interior cockpit
+  was added by Jim Wilson.
 
 
 Christian Mayer <flightgear@christianmayer.de>
