--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 New in 0.9.3
-* October 15, 2003
+* October 22, 2003
 
 * Added a flight "replay" system.
 * Many updates to the ATC and AI aircraft subsystem. (David Luff)
@@ -18,6 +18,12 @@ New in 0.9.3
 * Many buildings and bridges added in the San Francisco area.
 * Updated airport and navaid database, many new taxiways, many
   corrected runways, many new airports (especially outside the USA.)
+* Updates to the man page.
+* Better Win32 packaging (more standardized installer, plus a launcher
+  which allows selection of starting location and starting aircraft.)
+* Added an initial cut at modeling helicopters.
+* Support multiple inside the cockpit views.
+* Updated FlightGear Flight School tutorial.
 
 * Use the field elevation for GS when no specific altitude listed in
   FAA/DAFIF data
@@ -35,7 +41,8 @@ New in 0.9.3
 * JSBSim updates including a new turbine engine model that supports
   things like starting and stopping procedures and thrust reversing.
 * UIUCsim updates (compiler warning and namespace conflict fixes.)
-* YASim updates (fix drag from shutdown engine.)
+* YASim updates (fix drag from shutdown engine, helicopter support,
+  better in airr startup support.)
 * Support for "clock" instruments that operate independently of
   computer system time.
 * Annunciators shouldn't work if electrical system not serviceable.
@@ -50,13 +57,15 @@ New in 0.9.3
 * Updated aircraft: 747, A320, T-38, A-10, B-52, F-104, Fokker 50,
   Fokker 100, Piper Cub, P-51, UFO, YF-23, Ornithopter, A-4, C172,
   and F-16
-* New Aircraft: J-22, Paraglider, SGS-126 Sailplane, ASW 20, and AN-225.
+* New Aircraft: J-22, Paraglider, SGS-126 Sailplane, ASW 20, and
+  AN-225 aircraft; Bell 206 JetRanger, CH-47 Chinook, and Ecureuil
+  AS-350 helicoptors.
 * Updated cloud textures.
 
 * Removed dependency on Metakit.  The airport and runway databases are now
   stored in a simple flat file ascii database.
 
-* FreeBSD, Solaris, MSVC, Irix, cygwin, and mingwin fixes.
+* FreeBSD, Solaris, MSVC, Irix, Mac OSX, cygwin, and mingwin fixes.
 
 
 New in 0.9.2
