Old address abandoned.

--- a/Thanks
+++ b/Thanks
@@ -596,7 +596,7 @@ Michael Smith <msmith99@flash.net>
   Project Bonanza - http://members.xoom.com/ConceptSim/index.html
 
 
-Martin Spott <Martin.Spott@uni-duisburg.de>
+Martin Spott <Martin@flightgear.org>
   Contributed to the installation / user guide.
   Coorganizer of the FlightGear booth at the annual LinuxTag event in
   Germany.
